--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "website-revamp",
   "version": "0.1.0",
+  "homepage": "https://potatogolden76.github.io/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -14,6 +15,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -42,7 +45,8 @@
     "@types/node": "^18.7.13",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
-    "typescript": "^4.7.4",
-    "react-router-dom": "^6.3.0"
+    "gh-pages": "^4.0.0",
+    "react-router-dom": "^6.3.0",
+    "typescript": "^4.7.4"
   }
 }
