--- a/package.json
+++ b/package.json
@@ -45,8 +45,11 @@
     "@types/node": "^18.7.13",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "autoprefixer": "^10.4.8",
     "gh-pages": "^4.0.0",
+    "postcss": "^8.4.16",
     "react-router-dom": "^6.3.0",
+    "tailwindcss": "^3.1.8",
     "typescript": "^4.7.4"
   }
 }
